--- a/lernapp/lernapp-frontend/src/App.css
+++ b/lernapp/lernapp-frontend/src/App.css
@@ -19,3 +19,43 @@ h1, h2 {
 .MuiAppBar-root {
     background-color: #3f51b5; /* Adjust color as needed */
 }
+
+footer {
+    font-family: Arial, sans-serif;
+    background-color: #f5f5f5;
+    color: black;
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    margin-top: auto;
+    border-top: 1px solid #e0e0e0;
+  }
+  
+  .social-icons {
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .social-icon {
+    margin: 0 10px;
+    font-size: 24px;
+    transition: all 0.2s ease-in-out;
+  }
+  
+  .social-icon:hover {
+    transform: scale(1.4);
+    border-radius: 50%;
+    color: black;
+  }
+  
+  .social-icon a {
+    color: white;
+    margin: 0 10px;
+    font-size: 20px;
+    text-decoration: none;
+    transition: color 0.1s ease-in-out;
+  }
