--- a/lernapp/lernapp-frontend/src/App.css
+++ b/lernapp/lernapp-frontend/src/App.css
@@ -9,7 +9,7 @@ h1, h2 {
     color: #333;
 }
 .MuiDrawer-paper {
-    width: 250px; /* Adjust width as needed */
+    width: 250px; 
 }
 
 .MuiListItem-button {
@@ -17,7 +17,7 @@ h1, h2 {
 }
 
 .MuiAppBar-root {
-    background-color: #3f51b5; /* Adjust color as needed */
+    background-color: #3f51b5; 
 }
 
 footer {
@@ -59,3 +59,4 @@ footer {
     text-decoration: none;
     transition: color 0.1s ease-in-out;
   }
+  
