--- a/lernapp/lernapp-frontend/src/App.css
+++ b/lernapp/lernapp-frontend/src/App.css
@@ -21,18 +21,12 @@ h1, h2 {
 }
 
 footer {
-    font-family: Arial, sans-serif;
+    padding: 20px 0;
     background-color: #f5f5f5;
-    color: black;
-    text-align: center;
-    padding: 10px;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
     margin-top: auto;
     border-top: 1px solid #e0e0e0;
-  }
+    text-align: center;
+}
   
   .social-icons {
     margin-top: 10px;
